[package]
name = "astroriver-tool"
version = "0.1.0"
edition = "2024"
description = "Fieldwork tool to coordinate offline functionality with the astroriver platform"

[dependencies]
dotenvy = "0.15.7"
iced = { version = "0.13.1", features = ["tokio"] }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
open = "5.3.2"
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
